--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,17 @@
   margin-right: 10px;
 }
 
-.iconBtn{
-  padding: 0;
-  margin-bottom: 30px;
-  box-shadow: none;
+
+.whiteIcon{
+  color:gray
 }
 
-.iconBtn:hover{
-  box-shadow: none;
+.redIcon{
+  color:#ff0000
+}
+
+.Icon:hover{
+  cursor: pointer;
 }
 
 .submitBtn {
