--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,18 @@
   
 }
 
+.displayS{
+  display: inline-block;
+}
+
+.displayNone{
+  display: none;
+}
+
+.yellowStar{
+  color:#F5E71F
+}
+
 .forLastLink{
   color:white;
   display: flex;
