--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,12 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   background-color: #4285F4;
 }
+
+.main {
+  text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
